# clap-disto

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake  get_cpm.cmake  utils.cmake
cmake/mac/: Disstortion.plist.in  run_sign.sh  utils.cmake
shaders/: fs_glitch.sc
src/: disstortion-pluginentry.cpp  disstortion.cpp  disstortion.h  params.h
src/dsp/: BiquadFilter.cpp  BiquadFilter.h  CubicDrive.cpp  CubicDrive.h  MultiDisto.cpp  MultiDisto.h  NewBiquadFilter.h  OverSampler.cpp  OverSampler.h  PlaceHolderDisto.h  SmoothedValue.h
src/gui/: DisstortionEditor.cpp  DisstortionEditor.h  DriveSelector.cpp  DriveSelector.h  FilterPanel.cpp  FilterPanel.h  FilterSelector.cpp  FilterSelector.h  IParamControl.cpp  IParamControl.h  PresetsPanel.cpp  PresetsPanel.h  RotaryKnob.cpp  RotaryKnob.h  ToggleButton.cpp  ToggleButton.h
src/helpers/: IParamControl.cpp  IParamControl.h  Logger.h  Utils.h
src/params/: IParameterListener.cpp  IParameterListener.h  ParamValueType.h  Parameter.cpp  Parameter.h  Parameters.cpp  Parameters.h  ValueMapping.cpp  ValueMapping.h
src/presets/: PresetManager.cpp  PresetManager.h
src/utils/: Folders.cpp  Folders.h  Logger.h  Utils.h
